--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,6 +1,7 @@
 <div class="login-signup-container">
   <h2>Signup</h2>
   <form action="/signup" method="post">
+    <input type="hidden" name="redirectUrl" value="{{redirectUrl}}">
     <div class="form-group">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" placeholder="Enter name">
