--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,7 +5,7 @@
   <a href="/" style="font-size: 36px;">Jobify</a>
 
   <form class="search-bar" action="/search" method="GET">
-    <input type="text" name="keyword" placeholder="Search jobs...">
+    <input type="text" name="q" placeholder="Search jobs...">
     <button type="submit">Search</button>
   </form>
 
